--- a/src/components/buttons/primary_button/PrimaryButton.css
+++ b/src/components/buttons/primary_button/PrimaryButton.css
@@ -9,14 +9,14 @@
     padding: 7px 17px 6px;
     border-radius: 2px;
     transition: all .2s ease-in;
-    position: relative;
-    overflow: hidden;
+    width: 100%;
+    height: 100%;
 }
 
 .primary-button:hover {
     background-color: #3190d2;
-    box-shadow: 0 1px 4px 1px rgba(0, 0, 0, .2);
     transition: all .2s ease-out;
+    cursor: pointer;
 }
 
 /*.primary-button:active {*/
