--- a/src/components/buttons/PrimaryButton/PrimaryButton.css
+++ b/src/components/buttons/PrimaryButton/PrimaryButton.css
@@ -11,6 +11,10 @@
     transition: all .2s ease-in;
     width: 100%;
     height: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    min-width: 120px;
 }
 
 .primary-button:hover {
