--- a/src/components/buttons/TextButton/TextButton.css
+++ b/src/components/buttons/TextButton/TextButton.css
@@ -12,6 +12,10 @@
     width: 100%;
     height: 100%;
     position: relative;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    min-width: 120px;
 }
 
 .dashed-border {
