--- a/src/components/buttons/TextLinkButton/TextLinkButton.css
+++ b/src/components/buttons/TextLinkButton/TextLinkButton.css
@@ -1,4 +1,4 @@
-.text-button {
+.text-link-button {
     background-color: transparent;
     color: #000;
     border: none;
@@ -6,33 +6,27 @@
     box-sizing: border-box;
     outline: none;
     font-size: 12px;
-    padding: 7px 17px 6px;
+    padding: 7px 5px 6px;
     border-radius: 2px;
-    transition: all .2s ease-in;
-    width: 100%;
-    height: 100%;
     position: relative;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
-.dashed-border {
+.text-link-button .dashed-border {
     position: absolute;
-    width: calc(100% - 34px);
+    width: calc(100% - 10px);
     border-bottom: 1px dashed;
-    left: 17px;
+    left: 5px;
     bottom: 4px;
-    transition: all .2s;
 }
 
-.text-button:hover {
-    background-color: rgba(0, 0, 0, .05);
-    transition: all .2s ease-out;
+.text-link-button:hover {
+    color: #666;
     cursor: pointer;
 }
 
-.text-button:hover .dashed-border {
+.text-link-button:hover .dashed-border {
     display: none;
-    transition: all .2s;
 }
