--- a/src/components/buttons/TextLinkButton/TextLinkButton.css
+++ b/src/components/buttons/TextLinkButton/TextLinkButton.css
@@ -1,4 +1,5 @@
-.text-link-button {
+.text-link-button,
+.text-link-button-disabled {
     background-color: transparent;
     color: #000;
     border: none;
@@ -14,7 +15,13 @@
     text-overflow: ellipsis;
 }
 
-.text-link-button .dashed-border {
+.text-link-button-disabled {
+    cursor: initial;
+    opacity: .5;
+}
+
+.text-link-button .dashed-border,
+.text-link-button-disabled .dashed-border {
     position: absolute;
     width: calc(100% - 10px);
     border-bottom: 1px dashed;
